--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+# rename this is file as .tmux.conf and move to ~/
+
 # Reload configuration
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind S source-file ~/tmux/session1
