--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,10 @@
 # set-option -g prefix Escape
 set-option -g prefix c-q
 
+# quick pane cycling
+unbind ^A
+bind ^A select-pane -t :.+
+
 # press prefix twice to send the prefix to the background application
 unbind c-b
 bind c-q send-prefix
