udpate .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,12 +10,9 @@ bind c-q send-prefix
 # shorten the delay when press prefix
 set -sg escape-time 1
 
-# allow mouse to select
-#setw -g mode-mouse on
+# allow mouse to select pane, resize pane, select window
+#set -g mouse on
 
-#set -g mouse-select-pane on
-#set -g mouse-resize-pane on
-#set -g mouse-select-window on
 
 # split
 unbind % # Remove default binding since we’re replacing
