--- a/.tmux.conf
+++ b/.tmux.conf
@@ -106,3 +106,6 @@ set -g message-attr bright
 # set tmux to monitor for activity in a window, and let the window list show activity in a window
 setw -g monitor-activity on
 set -g visual-activity on
+
+# auto renumber window after exit from a window
+set-option -g renumber-windows on
