--- a/.tmux.conf
+++ b/.tmux.conf
@@ -109,3 +109,7 @@ set -g visual-activity on
 
 # auto renumber window after exit from a window
 set-option -g renumber-windows on
+
+# Join windows: <prefix> s, <prefix> j
+bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
