--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,8 +33,8 @@ unbind p
 bind p previous-window
 
 # list-windows
-unbind l
-bind l list-windows
+#unbind l   # default `l` is to switch between the last 2 windows
+#bind l list-windows
 
 # detach
 unbind d
@@ -80,6 +80,9 @@ set -g base-index 1
 
 # History
 #set -g history-limit 5000
+
+# bar message display time
+set-option -g display-time 2000
 
 # Set Status bar
 set -g status-bg black
