--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,6 +70,7 @@ bind S source-file ~/tmux/session1
 bind N command-prompt 'rename-session %%'
 
 #set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 # Use vi mode
 setw -g mode-keys vi
