--- a/.tmux.conf
+++ b/.tmux.conf
@@ -117,3 +117,7 @@ set-option -g renumber-windows on
 # Join windows: <prefix> s, <prefix> j
 bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
+
+# use Alt-arrow to switch window
+bind-key -n M-Left previous-window
+bind-key -n M-Right next-window
