--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,11 @@ bind c-q send-prefix
 set -sg escape-time 1
 
 # allow mouse to select pane, resize pane, select window
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
+#啟用滑鼠功能後，會使滑鼠選擇文字功能失效，但只要按鍵shift鍵去選擇即可，shift+滑鼠中鍵可貼上
+#註:這些選項在 tmux 2.1版之後被取消了，只改成一個"mouse"選項了
 #set -g mouse on
 
 
