--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,12 +11,12 @@ bind c-q send-prefix
 set -sg escape-time 1
 
 # allow mouse to select pane, resize pane, select window
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+#set -g mouse-select-window on
 #啟用滑鼠功能後，會使滑鼠選擇文字功能失效，但只要按鍵shift鍵去選擇即可，shift+滑鼠中鍵可貼上
 #註:這些選項在 tmux 2.1版之後被取消了，只改成一個"mouse"選項了
-#set -g mouse on
+set -g mouse off
 
 
 # split
@@ -101,16 +101,26 @@ set -g status-left "#[fg=white,bright,bg=blue] Session #[fg=yellow,bright,bg=blu
 set -g status-right "#[fg=yellow,bright] %Y-%m-%d #[fg=green]%a %H:%M #[default]" # status bar 右邊要顯示的東西
 
 # Configuration for each window.
-setw -g window-status-format " #I.#W "
-setw -g window-status-current-format " #I.#W "
-setw -g window-status-current-bg red
-setw -g window-status-current-fg white
-setw -g window-status-current-attr default
+#setw -g window-status-format " #I.#W "
+#setw -g window-status-current-format " #I.#W "
+#setw -g window-status-current-bg red
+#setw -g window-status-current-fg white
+#setw -g window-status-current-attr default
+## after version 2.9
+# set color for status bar
+set-option -g status-style bg=colour235,fg=yellow,dim
+
+# set window title list colors
+set-window-option -g window-status-style fg=brightblue,bg=colour235,bright
+
+# active window title colors
+set-window-option -g window-status-current-style fg=white,bg=red,bright
 
 # set the alert and tmux command line colors
-set -g message-fg colour136
-set -g message-bg colour235
-set -g message-attr bright
+#set -g message-fg colour136
+#set -g message-bg colour235
+#set -g message-attr bright
+set -g message-style fg=colour136,bg=colour235,bright
 
 # set tmux to monitor for activity in a window, and let the window list show activity in a window
 setw -g monitor-activity on
