--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,13 +21,13 @@ set -g mouse off
 
 # split
 unbind % # Remove default binding since we’re replacing
-bind | split-window -h
+bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
-bind _ split-window -v
+bind _ split-window -v -c "#{pane_current_path}"
 
 # new-window
 unbind c
-bind c new-window
+bind c new-window -c "#{pane_current_path}"
 
 # next-window
 unbind n
@@ -60,6 +60,14 @@ bind / confirm-before "kill-server"
 # kill k
 unbind k
 bind k confirm-before "kill-window"
+
+# switch between 2 latest windows
+#unbind q    # q is showing pane number by default
+#bind q last-window  # by default, it is l
+
+# rotate among panes
+#unbind w    # w is choose pane from windows by default
+#bind w last-pane    # by default, it is ;
 
 # resize panes like vim
 # feel free to change the "1" to however many lines you want to resize by, only
@@ -108,13 +116,14 @@ set -g status-right "#[fg=yellow,bright] %Y-%m-%d #[fg=green]%a %H:%M #[default]
 #setw -g window-status-current-attr default
 ## after version 2.9
 # set color for status bar
-set-option -g status-style bg=colour235,fg=yellow,dim
+#set-option -g status-style bg=colour235,fg=yellow,dim
+set-option -g status-style bg=colour235,fg=yellow,bright
 
 # set window title list colors
 set-window-option -g window-status-style fg=brightblue,bg=colour235,bright
 
 # active window title colors
-set-window-option -g window-status-current-style fg=white,bg=red,bright
+set-window-option -g window-status-current-style fg=green,bg=red,bright
 
 # set the alert and tmux command line colors
 #set -g message-fg colour136
@@ -130,8 +139,8 @@ set -g visual-activity on
 set-option -g renumber-windows on
 
 # Join windows: <prefix> s, <prefix> j
-bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
-bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
+bind-key J command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key S command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # use Alt-arrow to switch window
 bind-key -n M-Left previous-window
