--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,6 +61,9 @@ bind / confirm-before "kill-server"
 unbind k
 bind k confirm-before "kill-window"
 
+# unbind paste-buffer, use = to select buffer and paste
+unbind ]
+
 # switch between 2 latest windows
 #unbind q    # q is showing pane number by default
 #bind q last-window  # by default, it is l
@@ -68,6 +71,28 @@ bind k confirm-before "kill-window"
 # rotate among panes
 #unbind w    # w is choose pane from windows by default
 #bind w last-pane    # by default, it is ;
+
+# Switching tmux zoom between panes without zooming out
+unbind a
+bind -r a select-pane -t .+1 \;  resize-pane -Z
+
+# continue to move to next pane by pressing o
+unbind o
+bind -r o select-pane -t .+1
+
+# continue the actions by double press the key
+unbind p
+bind -r p previous-window
+unbind n
+bind -r n next-window
+unbind l
+bind -r l last-window
+unbind \;
+bind -r \; last-pane
+
+# show pane name
+#set -g pane-border-status top/bottom
+#set -g pane-border-format "#{pane_index} #{pane_current_command}"
 
 # resize panes like vim
 # feel free to change the "1" to however many lines you want to resize by, only
