--- a/.tmux.conf
+++ b/.tmux.conf
@@ -170,3 +170,9 @@ bind-key S command-prompt -p "send pane to:"  "join-pane -t '%%'"
 # use Alt-arrow to switch window
 bind-key -n M-Left previous-window
 bind-key -n M-Right next-window
+
+
+bind-key -n M-l next-window
+bind-key -n M-h previous-window
+bind-key -n M-j select-pane -t .-1
+bind-key -n M-k select-pane -t .+1
