--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,12 @@ set-option -g prefix c-q
 unbind c-b
 bind c-q send-prefix
 
+# q to move among panes
+unbind Q
+bind Q display-panes
+unbind q
+bind -r q select-pane -t .+1
+
 # shorten the delay when press prefix
 set -sg escape-time 1
 
