--- a/.gitconfig
+++ b/.gitconfig
@@ -12,3 +12,5 @@
     unstage = reset HEAD --
     last = log -1 HEAD
     hs = log --pretty='%C(yellow)%h %C(cyan)%cd %Cblue%aN%C(auto)%d %Creset%s' --date=short
+[pull]
+	rebase = true
