--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,11 +86,11 @@ bind -r a select-pane -t .+1 \;  resize-pane -Z
 unbind o
 bind -r o select-pane -t .+1
 
-# continue the actions by double press the key
-unbind p
-bind -r p previous-window
-unbind n
-bind -r n next-window
+# -r: continue the actions by double press the key
+#unbind p
+#bind -r p previous-window
+#unbind n
+#bind -r n next-window
 unbind l
 bind -r l last-window
 unbind \;
@@ -176,6 +176,8 @@ bind-key S command-prompt -p "send pane to:"  "join-pane -t '%%'"
 # use Alt-arrow to switch window
 bind-key -n M-Left previous-window
 bind-key -n M-Right next-window
+bind-key -n M-Up select-pane -t .-1
+bind-key -n M-Down select-pane -t .+1
 
 
 bind-key -n M-l next-window
