--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,8 @@ bind c-q send-prefix
 unbind Q
 bind Q display-panes
 unbind q
-bind -r q select-pane -t .+1
+bind -r q select-pane -t .+1   # continue the action by pressing key again
+
 
 # shorten the delay when press prefix
 set -sg escape-time 1
