--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,6 +101,11 @@ bind -r \; last-pane
 #set -g pane-border-status top/bottom
 #set -g pane-border-format "#{pane_index} #{pane_current_command}"
 
+# make current pane clearer
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=black'
+set-option -g pane-active-border-style fg=red
+
 # resize panes like vim
 # feel free to change the "1" to however many lines you want to resize by, only
 # one at a time can be slow
