--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,7 +34,9 @@ bind _ split-window -v -c "#{pane_current_path}"
 
 # new-window
 unbind c
-bind c new-window -c "#{pane_current_path}"
+bind c new-window
+unbind C
+bind C new-window -c "#{pane_current_path}"
 
 # next-window
 unbind n
@@ -130,7 +132,7 @@ set -g status-keys vi
 set -g base-index 1
 
 # History
-#set -g history-limit 5000
+set-option -g history-limit 5000
 
 # bar message display time
 set-option -g display-time 2000
