--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,9 +34,10 @@ bind _ split-window -v -c "#{pane_current_path}"
 
 # new-window
 unbind c
-bind c new-window
+bind c new-window -c "#{pane_current_path}"
 unbind C
-bind C new-window -c "#{pane_current_path}"
+bind C new-window -a -c "#{pane_current_path}"
+## -a means create new window at next index
 
 # next-window
 unbind n
